# asyncflows-lsp

./: .gitignore  .npmignore  LICENSE  Makefile  README.md  package.json  pyproject.toml  tsconfig.esm.json  tsconfig.json  tsconfig.umd.json  vitest.config.ts
.github/workflows/: build_only.yaml  release.yaml
editors/code/: .gitignore  .npmignore  .vscode-test.js  .vscodeignore  language-configuration.json  package.json  release.sh  tests.tsconfig.json  tsconfig.json  update-paths.sh  webpack.config.js
editors/code/client/: package.json
editors/code/example/: pyproject.toml
editors/code/example/configs/: debono.yaml
editors/code/scripts/: print-logs.ps1  print-logs.sh  update-nm.ps1  update-nm.sh  update-paths-darwin.sh  update-paths-win32.ps1  update-paths.sh
editors/code/src/: extension.ts
editors/code/syntaxes/: asyncflows-lsp.json
editors/code/tests/: extension.test.ts  runTest.ts
example/: README.md  pyproject.toml
example/configs/: debono.yaml
src/: action_schema.json  asyncflows_schema.ts  helper.ts  semanticTokens.ts  yamlServerInit.ts  yamlSettings.ts
src/languageserver/handlers/: languageHandlers.ts  schemaSelectionHandlers.ts  settingsHandlers.ts  validationHandlers.ts  workspaceHandlers.ts
src/languageservice/: yamlLanguageService.ts
src/languageservice/services/: yamlCompletion.ts  yamlDefinition.ts  yamlHover.ts  yamlSchemaService.ts  (+1 more)
src/tree_sitter_queries/: queries.ts  toInputEdit.ts
test/: tree_sitter.test.ts
test/configs/: debono.yaml
test2/: schema.test.ts  schemaValidation.test.ts
types/: text.d.ts
(+4 files in other folders)
