[project]
requires-python = ">= 3.11"

[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.asyncflows]
configs = "configs"
actions = "actions"
venv = "/home/uros/Documents/programiranje/python/asyncflows/asyncflows-lsp/example/.venv/bin/python"
